--- a/main.html
+++ b/main.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
-
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Web Page</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	
-
-
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div id="text">The specified text goes here.</div>
 </body>
-
 </html>
